--- a/front/.env.example
+++ b/front/.env.example
@@ -1,18 +1,19 @@
-APP_NAME="Microservice admin"
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ptWQMXxawXbgx/wgpkj/G/4ekdreOxbN+803pnqmwXY=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=admin_db
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=admin
+DB_DATABASE=front
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
