--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,9 +1,10 @@
 /node_modules
 /public/hot
+/public/storage
 /storage/*.key
 /vendor
-.env.backup
 .env
+.env.backup
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
@@ -12,4 +13,3 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-admin/storage/
